Updated to latest firepad/firebase; fixed some layout issues

--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ html {
 }
 
 #game {
-  margin: 50px auto;
+  margin: auto;
   text-align: left;
   width: 800px;
   padding: 50px;
